--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <a href="#contact" class="btn">Contact Me <i class="fas fa-arrow-circle-right"></i></a>
         </div>    
             <div class="home-img">
-                <img src="/images/home-img.png" alt="">
+                <img src="images/home-img.png" alt="">
             </div> 
     </div>
             <a href="#about" class="scroll-down">Scroll Down <i class="fas fa-arrow-down"></i></a>
@@ -75,7 +75,7 @@
         <h2 class="section-title-02">About Me</h2>
         <div class="content flex-center">
             <div class="about-img">
-                <img src="/images/about-img.jpeg" alt="">
+                <img src="images/about-img.jpeg" alt="">
             </div>
             <div class="about-info">
                 <div class="description">
@@ -202,7 +202,7 @@
                         <div class="portfolio-model-body">
                             <i class="fas fa-times portfolio-close-btn"></i>
                             <h3>Website</h3>
-                            <img src="/images/mishraagency.JPG" alt="">
+                            <img src="images/mishraagency.JPG" alt="">
                             <p>I've developed a comprehensive website for Mishra Agency that beautifully showcases their range of business products. Crafted with HTML, CSS, and JavaScript, this website presents a clear and engaging platform for visitors to explore and understand the diverse offerings of Mishra Agency.
                             </p>
                             <a href="https://utkarsh70081.github.io/Mishra_Agency/" class="link_center"> <i class="fa-solid fa-up-right-from-square"></i></a>
@@ -222,7 +222,7 @@
                         <div class="portfolio-model-body">
                             <i class="fas fa-times portfolio-close-btn"></i>
                             <h3>Foot Step Electricity Generator</h3>
-                            <img src="/images/tevhnoevnt.jpeg" class="size-img-project" alt="">
+                            <img src="images/tevhnoevnt.jpeg" class="size-img-project" alt="">
                             <p>My team has achieved a remarkable feat by designing and constructing a functional model of a footstep electricity generator, which has earned us the prestigious first-place position. This accomplishment underscores our innovative prowess and dedication. Our generator harnesses the power of footsteps to generate electricity, showcasing our commitment to sustainable energy solutions. </p>
                             
                         </div>
@@ -241,7 +241,7 @@
                         <div class="portfolio-model-body">
                             <i class="fas fa-times portfolio-close-btn"></i>
                             <h3>Website</h3>
-                            <img class="hover-img-adjst" src="/images/tempconvt.jpeg" alt="" >
+                            <img class="hover-img-adjst" src="images/tempconvt.jpeg" alt="" >
                             <p>I've developed a comprehensive website for Mishra Agency that beautifully showcases their range of business products. Crafted with HTML, CSS, and JavaScript, this website presents a clear and engaging platform for visitors to explore and understand the diverse offerings of Mishra Agency.</p>
                             <a href="https://utkarsh70081.github.io/Temperature_Converter/" class="link_center"> <i class="fa-solid fa-up-right-from-square"></i></a>
                         </div>
