--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
                         <div class="portfolio-model-body">
                             <i class="fas fa-times portfolio-close-btn"></i>
                             <h3>Website</h3>
-                            <img class="hover-img-adjst" src="/images/Camera.JPG" alt="" height="10px" >
+                            <img class="hover-img-adjst" src="images/Camera.JPG" alt="" height="10px" >
                             <p>I'm excited to present an animation project crafted with HTML, CSS, and JavaScript. From design to execution, it's all my creation. Dive into the animation—a simulated camera environment—where you can tweak scenery and object motion. Your feedback means the world to me. Check it out!</p>
                             <a href="https://utkarsh70081.github.io/Camera/#" class="link_center" target="_blank"><i class="fa-solid fa-up-right-from-square"></i></a>
 
