--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
                         <div class="portfolio-model-body">
                             <i class="fas fa-times portfolio-close-btn"></i>
                             <h3>Visible Light Communication</h3>
-                            <img src="/images/Li-Fi.jpeg" class="size-img-project" alt="">
+                            <img src="images/Li-Fi.jpeg" class="size-img-project" alt="">
                             <p>I've created a project using light for data transmission, transferring audio, video, and images. Leveraging light, it promises improved efficiency in data communication. Meticulous design and rigorous testing ensure seamless, reliable data transfer. This project signifies a substantial advance in data transmission technology, with broad industry applications.</p>
                             <a href="https://github.com/Utkarsh70081/Project-LiFi.git" class="link_center"> <i class="fa-solid fa-up-right-from-square"></i></a>
                             
